# deepsquare

./: .gitignore
backend/: .env.example  pyproject.toml
backend/app/: coach.py  engine.py  main.py  positions.json  positions.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.tsx  Settings.tsx  index.css
