[project]
name = "deepsquare-backend"
version = "0.1.0"
description = "DeepSquare chess coaching backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn==0.30.6",
    "sse-starlette==2.1.3",
    "python-chess==1.999",
    "litellm==1.48.7",
    "python-dotenv==1.0.1",
]
